# sset_parser

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  rsync.bash
sset_parser/: main.py
sset_parser/core/: ai_handler.py  client_manager.py  matcher.py
sset_parser/database/: db_manager.py  models.py
