[tool.poetry]
name = "sset_parser"
version = "1.1.0"
description = "SaaS AI Telegram Parser using Telethon, Aiogram and Mistral AI"
authors = ["Your Name <you@example.com>"]
packages = []

[tool.poetry.dependencies]
python = "^3.10"
telethon = "^1.34.0"
aiosqlite = "^0.19.0"
sqlalchemy = "^2.0.25"
qrcode = "7.4.2"
pillow = "10.2.0"
loguru = "0.7.3"
gigachat = "0.2.0"
pymorphy3 = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"